Implement in_name_ok and out_name_ok