@@ -2,6 +2,7 @@ package com.xerdi.jkpathsea;
 
 import java.io.*;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class KPathSeaProcess implements IKPathSea {
@@ -30,6 +31,16 @@ public class KPathSeaProcess implements IKPathSea {
     }
 
     @Override
+    public boolean inNameOk(String name) {
+        return checkCmdline(kpseArgs(String.format("-safe-in-name=%s", name))) == 0;
+    }
+
+    @Override
+    public boolean outNameOk(String name) {
+        return checkCmdline(kpseArgs(String.format("-safe-out-name=%s", name))) == 0;
+    }
+
+    @Override
     public String findFile(String filename, FileFormatType format, boolean mustExist) {
         String[] args;
         if (mustExist)
@@ -39,22 +50,35 @@ public class KPathSeaProcess implements IKPathSea {
         return cmdline(args)[0];
     }
 
-    private String[] kpseArgs(String ...args) {
+    private String[] kpseArgs(String... args) {
         List<String> argList = new ArrayList<>();
         argList.add(KPSEWHICH);
         if (program != null) {
             argList.add(String.format("-progname=%s", program));
         }
-        argList.addAll(List.of(args));
-        return argList.toArray(String[]::new);
+        argList.addAll(Arrays.asList(args));
+        return argList.toArray(new String[0]);
     }
 
-    private String[] cmdline(String... arg) {
+    private int checkCmdline(String... args) {
+        int exitCode;
+        Process process;
+        try {
+            process = new ProcessBuilder(args).start();
+            exitCode = process.waitFor();
+        } catch (IOException | InterruptedException e) {
+            System.err.printf("Executing kpsewhich went wrong with command '%s'", String.join(" ", args));
+            exitCode = -1;
+        }
+        return exitCode;
+    }
+
+    private String[] cmdline(String... args) {
         // TODO: get rid of runtime errors and return EMPTY instead
         int exitCode;
         Process process;
         try {
-            process = new ProcessBuilder(arg).start();
+            process = new ProcessBuilder(args).start();
             exitCode = process.waitFor();
         } catch (IOException | InterruptedException e) {
             throw new RuntimeException(e);
@@ -88,5 +112,7 @@ public class KPathSeaProcess implements IKPathSea {
         System.out.println("TEXMFHOME: " + kpse.varValue("TEXMFHOME"));
         System.out.println("STY file: " + kpse.findFile("babel.sty"));
         System.out.println("Lua file: " + kpse.findFile("gitinfo-lua.lua", FileFormatType.lua));
+        System.out.println("main.tex ok in file? " + (kpse.inNameOk("main.tex") ? "yes" : "no"));
+        System.out.println("../out/my-document.pdf ok out file? " + (kpse.outNameOk("../out/my-document.pdf") ? "yes" : "no"));
     }
 }
